[gd_scene load_steps=2 format=2]

[ext_resource path="res://tanks/Tank.gd" type="Script" id=1]

[node name="Tank" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Bullet = null
MuzzleFlash = null
Track = null
max_speed = null
rotation_speed = null
gun_cooldown = null
max_health = null
drop_rate = null

[node name="Body" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[node name="Turret" type="Sprite" parent="." index="2"]

[node name="Muzzle" type="Position2D" parent="Turret" index="0"]

[node name="Flash" type="Position2D" parent="Turret" index="1"]

[node name="GunTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DropRate" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.04
one_shot = false
autostart = false

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[connection signal="timeout" from="DropRate" to="." method="_on_DropRate_timeout"]


